<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:contentDescription="@string/profile"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/smiley" />

    <com.ben.selfadvocacy.EnhancedTextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="34dp"
        android:hint="@string/full_name"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <com.ben.selfadvocacy.EnhancedTextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:hint="@string/username"
        android:textSize="30sp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/oldPassField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fullName"
        android:layout_alignStart="@+id/fullName"
        android:layout_below="@+id/fullName"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:maxLength="4"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/newPassField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oldPassField"
        android:layout_alignStart="@+id/oldPassField"
        android:layout_below="@+id/oldPassField"
        android:ems="10"
        android:maxLength="4"
        android:hint="@string/new_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/newPassField2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPassField"
        android:layout_alignStart="@+id/newPassField"
        android:layout_below="@+id/newPassField"
        android:ems="10"
        android:maxLength="4"
        android:hint="@string/new_password_again"
        android:inputType="numberPassword" />

    <com.ben.selfadvocacy.EnhancedButton
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPassField2"
        android:layout_alignStart="@+id/newPassField2"
        android:layout_below="@+id/newPassField2"
        android:layout_marginTop="11dp"
        android:textSize="25sp"
        android:text="@string/change_password" />

    <com.ben.selfadvocacy.EnhancedTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/oldPassField"
        android:layout_alignStart="@+id/oldPassField"
        android:layout_below="@+id/fullName"
        android:layout_marginTop="24dp"
        android:text="@string/change_my_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>